Home_work/14.3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app
spec:
  ports:
  - name: frontend
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name:  backend
  namespace: app
spec:
  ports:
  - name: backend
    protocol: TCP
    port: 90
    targetPort: 90
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  name:  cache
  namespace: app
spec:
  ports:
  - name: cache
    protocol: TCP
    port: 100
    targetPort: 100
  selector:
    app: cache
